--- a/scrolling/index.css
+++ b/scrolling/index.css
@@ -22,19 +22,33 @@ section {
   top: 100%;
   transform: translate(-50%, -100%)
 }
-p {
+
+.pars {
   max-width: 600px;
-  margin: 20px auto
+  background: rgba(255,255,255, 0.6);
+  margin: 0 auto;
+  padding: 20px
+}
+p {
+  margin: 20px auto;
 }
 
 pre {
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0,0,0, 0.4);
-  color: lime;
+  background: rgba(0,0,0, 0.6);
+  color: #bada55;
   width: 300px;
+  max-height: 100vh;
   overflow: auto;
   margin: 0;
   padding: 10px
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1
 }
