style and map posiiotn updates

--- a/scrolling/index.css
+++ b/scrolling/index.css
@@ -1,6 +1,6 @@
 html, body {
   margin: 0;
-  padding: 100px 0;
+  padding: 0;
   font-family: sans-serif;
 }
 * {
@@ -9,27 +9,46 @@ html, body {
 }
 
 section {
+  /* border: solid 5px orange */
   width: 100vw;
-  height: 100vh;
-  border: solid 5px orange
+  height: 150vh;
 }
 
 .wrapper {
-  border: solid 1px grey;
+  /* border: solid 1px grey; */
+  background: rgba(255,255,255, 0.5);
   padding: 20px;
   max-width: 600px;
   left: 50%;
-  top: 100%;
-  transform: translate(-50%, -100%)
+  top: 50%;
+  transform: translate(-50%, -50%)
 }
 
-.pars {
-  max-width: 600px;
-  background: rgba(255,255,255, 0.6);
+.intro {
+  position: relative;
+  height: 85vh;
+  /* padding: 20vh 0; */
+  /* background: white; */
+  /* padding-top: 30vh; */
+}
+h1 {
+  position: relative;
+  width: 80vw;
+  border: solid 1px ;
+  padding: 5vw 10vw;
+  color: white;
   margin: 0 auto;
-  padding: 20px
+  font-size: 80px;
+  top: 50%; 
+  transform: translate(0, -50%)
+}
+.pars {
+  margin: 0 auto;
+  padding: 20px;
+  background: rgba(255,255,255, 1);
 }
 p {
+  max-width: 600px;
   margin: 20px auto;
 }
 
