style changes for page integration

--- a/scroll-demo-vue/src/styleguide/reset.sass
+++ b/scroll-demo-vue/src/styleguide/reset.sass
@@ -33,7 +33,7 @@ article[data-type=dna-custom-app]
   max-width: 1000px
   margin: 32px auto
   &[data-theme="light"]
-    background: white
+    // background: white
   @media screen and (min-width: 960px)
     padding: 32px 32px
   &[data-longform]
